# python-project-boilerplate

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
boilerplate_poetry_project/: add.py  multiply.py
tests/: test_add.py  test_multiply.py
