[tool.poetry]
name = "boilerplate-poetry-project"
version = "0.1.0"
description = "Efficiently jumpstart your Python projects"
authors = ["Mridula Maddukuri <mridulamaddukuri@utexas.edu>"]
readme = "README.md"
packages = [{include = "boilerplate_poetry_project"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
isort = "^5.13.2"
ruff = "^0.4.7"
pytest = "^8.1.1"
hypothesis = "^6.99.12"
mypy = "^1.9.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
